Bug 107729 - MAILMERGE: Crash while saving new document
Summary: MAILMERGE: Crash while saving new document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha1
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.5.0 target:5.4.0.1 target:5.3.4
Keywords: haveBacktrace
: 107721 (view as bug list)
Depends on:
Blocks: Mail-Merge
  Show dependency treegraph
 
Reported: 2017-05-09 15:18 UTC by Xisco Faulí
Modified: 2017-05-31 08:14 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["SfxViewShell::GetViewFrame()"]


Attachments
backtrace (27.00 KB, text/x-log)
2017-05-09 15:29 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-05-09 15:18:04 UTC
This might be the same as bug 107721 but since both signatures are different, I decided to report it in a different ticket

Steps to reproduce:
1. Open new writer document
2. Go to Tools - Mail Merge Wizards
3. Select 'Create new document' on the first dialog and click Next -> A new document is created in background
4. Close the mailmerge wizard by clicking Cancel.
5. Close the document called 'Untitled 2'
6. Go to 'Untitled 1' document and click on 'Saved Merged Documents'
7. Click on 'Save Documents'
8. Select a document and click on Save

CRASH!

Reproduced in

Versión: 5.3.2.2
Id. de compilación: 6cd4f1ef626f15116896b1d8e1398b56da0d0ee1
Subproc. CPU: 1; SO: Windows 6.1; Repr. de IU: predet.; Motor de trazado: HarfBuzz; 
Configuración regional: es-ES (es_ES); Calc: group
Comment 1 Xisco Faulí 2017-05-09 15:29:26 UTC
Created attachment 133197 [details]
backtrace
Comment 2 Xisco Faulí 2017-05-10 10:18:33 UTC
The crash was introduced when the mailmerge dialog was refactored in range https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=59a3d972d2909650506409eeb6d4a71fa263dc29..b86b97e54590872fc0ea85fbea22c2d00d241181

Adding Kendy as Cc since he did the refactoring.
Comment 3 Telesto 2017-05-10 13:14:57 UTC
Repro:
Version: 5.4.0.0.alpha1+
Build ID: 9d320ec4d818f86e58a15fd46248026502b1cc94
CPU threads: 4; OS: Windows 6.2; UI render: default; 
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2017-05-09_01:27:12
Locale: en-US (nl_NL); Calc: single

http://crashreport.libreoffice.org/stats/crash_details/ae44c6a7-3f6b-49d3-82d6-4bb93ad378b3
Comment 4 Commit Notification 2017-05-30 10:43:06 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=345be1519e96be63624bf58ca5de0fe9abe16edd

tdf#107729: Disable toolbar items that are not available yet.

It will be available in 5.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2017-05-30 13:10:12 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=85460d3d92c153f76210b82b3e5ac78f005858c6&h=libreoffice-5-4

tdf#107729: Disable toolbar items that are not available yet.

It will be available in 5.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2017-05-30 16:24:41 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=824426811897347d8a9aacff4f304572cec1473c&h=libreoffice-5-3

tdf#107729: Disable toolbar items that are not available yet.

It will be available in 5.3.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Jan Holesovsky 2017-05-30 17:18:38 UTC
I think fixed now :-)
Comment 8 Xisco Faulí 2017-05-31 08:14:05 UTC
*** Bug 107721 has been marked as a duplicate of this bug. ***