tdf#107729: Disable toolbar items that are not available yet.

Otherwise trying to use them crashes LibreOffice.

Change-Id: I268e5b783905ec7aaaf50cbc629fd44e6341bf8d
Reviewed-on: https://gerrit.libreoffice.org/38184
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Tested-by: Jenkins <ci@libreoffice.org>